# aqua-timestamps

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  ORL.md  README.md  Spec_Aqua_L1_Operational_Fuel_Bonding_Curve.md  Spec_Aqua_Trust_Competition_Model.md  config.toml.example
.github/workflows/: deploy.yml
Skills/server-wallet-hsm/: SKILL.md
crates/aqua-timestamp/: Cargo.toml
crates/aqua-timestamp-client/: Cargo.toml  README.md
crates/aqua-timestamp-client/examples/: stress_1000.rs
crates/aqua-timestamp-client/src/: auth.rs  client.rs  error.rs  hex_utils.rs  identity.rs  known_servers.rs  lib.rs  trust.rs  types.rs
crates/aqua-timestamp-client/tests/: integration.rs  live_roundtrip.rs
crates/aqua-timestamp-client/tests/common/: mod.rs
crates/aqua-timestamp-core/: Cargo.toml
crates/aqua-timestamp-core/src/: accumulator.rs  anchors.rs  bonding_curve.rs  epoch.rs  events.rs  leaderboard.rs  lib.rs  merkle.rs  sealer.rs  storage.rs  time.rs  witness.rs
crates/aqua-timestamp-core/tests/: merkle_property.rs
crates/aqua-timestamp-e2e/: Cargo.toml
crates/aqua-timestamp-e2e/src/: flow.rs  main.rs  selfcheck.rs
crates/aqua-timestamp-e2e/tests/: multi_method.rs  selfcheck.rs
crates/aqua-timestamp/src/: auth.rs  blueprint.rs  config.rs  docs.rs  identity.rs  landing.rs  lib.rs  main.rs  oracle.rs  routes.rs  state.rs  watcher.rs
crates/aqua-timestamp/tests/: auth_flow.rs  identity.rs  leaderboard_flow.rs  leaves_flow.rs  live_sepolia_anchor.rs  smoke_health.rs  sse_events.rs  witness_flow.rs
crates/aqua-timestamp/tests/fixtures/: identity_golden.json
deploy/: .dockerignore  Dockerfile  caddyfile.snippet  config.toml  docker-compose.yml
docs/: 2026-05-20-governance-subsystem-design.md  Spec_Aqua_L1_Operational_Fuel_Bonding_Curve.md  Spec_Aqua_L1_Timestamping_Bonding_Curve.md  Spec_Aqua_Merkle_Membership_Shielding.md  analysis_2026-05-20_bonding-curve-budget-0055eth.md  analysis_2026-05-20_bonding-curve-budget-100eth.md  analysis_2026-05-20_key-security-upgrade-path.md  analysis_2026-05-20_server-wallet-landscape.md  aqua-skill.md  design-spec.md  handover-2026-05-17.md  spec-client.md  spec-ed25519-witness-signing.md  success-criteria.md  swix-authentication.md
docs/handover/: session-2026-05-20-capacity-wallet-pool.md  session-2026-05-20-fuel-curve-design.md  session-2026-05-20-subscription-model.md
docs/runbooks/: client-live-verification.md  e2e-live-transcript-2026-05-17.md  m0-deploy-transcript-2026-05-17.md  m5-qtsa-anchor-2026-05-17.md  multi-method-e2e-and-anchor-2026-05-17.md  session-2026-05-17-overnight-build.md
docs/superpowers/plans/: 2026-05-20-status-page-phase1.md
docs/superpowers/specs/: 2026-05-20-status-page-design.md
skills/: timestamping-bonding-curve.md
tests/e2e/: live_roundtrip.sh
