[workspace]
resolver = "2"
members = [
    "crates/aqua-timestamp",
    "crates/aqua-timestamp-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/inblockio/aqua-timestamp"
rust-version = "1.85"

[workspace.dependencies]
# Sister-repo path deps. These prove workspace resolution at M0 and
# carry their real load from M1 onward.
aqua-rs-sdk = { path = "../aqua-rs-sdk", default-features = false, features = ["native", "blockchain", "web"] }
aqua-auth   = { path = "../aqua-rs-auth", default-features = false }

# Async + HTTP
tokio    = { version = "1", features = ["full"] }
axum     = { version = "0.8", features = ["macros"] }
tower    = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper    = { version = "1", features = ["full"] }
reqwest  = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serde
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.9"

# Logging / observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Crypto helpers
hex   = "0.4"
sha3  = "0.10"
rand  = "0.8"

# Storage
fjall = "2"

# CLI + config
clap     = { version = "4", features = ["derive"] }
anyhow   = "1"
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = true
opt-level     = 3
