[workspace]
resolver = "2"
members = [
    "crates/aqua-timestamp",
    "crates/aqua-timestamp-core",
    "crates/aqua-timestamp-client",
    "crates/aqua-timestamp-e2e",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/inblockio/aqua-timestamps"
rust-version = "1.85"

[workspace.dependencies]
# Sister-repo path deps. These prove workspace resolution at M0 and
# carry their real load from M1 onward.
aqua-rs-sdk      = { path = "../aqua-rs-sdk", default-features = false, features = ["native", "blockchain"] }
aqua-auth        = { path = "../aqua-auth", default-features = false, features = ["http"] }
aqua-tsa         = { path = "../aqua-qualified-verification/aqua-tsa" }
aqua-evm-provider = { path = "../aqua-evm-provider" }

# Async + HTTP
tokio        = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
axum         = { version = "0.8", features = ["macros"] }
tower        = "0.5"
tower-http   = { version = "0.6", features = ["trace", "cors"] }
hyper        = { version = "1", features = ["full"] }
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serde
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.9"

# Logging / observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Crypto helpers
hex   = "0.4"
sha3  = "0.10"
rand  = "0.8"

# Ethereum RPC (bonding curve oracle)
alloy = { version = "2", default-features = false, features = ["provider-http", "reqwest-rustls-tls", "rpc-types", "network"] }

# Storage
fjall    = "2"
postcard = { version = "1", features = ["use-std"] }

# CLI + config
clap     = { version = "4", features = ["derive"] }
anyhow   = "1"
thiserror = "2"
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Test-only
proptest = "1"
tempfile = "3"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = true
opt-level     = 3
