[package]
name        = "aqua-timestamp-client"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
description = "Async client for the Aqua Timestamp Aggregator (timestamp.inblock.io). Submit hashes, await epoch sealing, retrieve verified witness pairs."

[lib]
name = "aqua_timestamp_client"
path = "src/lib.rs"

[dependencies]
aqua-rs-sdk = { workspace = true }
aqua-auth   = { workspace = true, features = ["client"] }

tokio   = { workspace = true }
reqwest = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }

tracing   = { workspace = true }
thiserror = { workspace = true }
hex       = { workspace = true }
url       = "2"
async-trait = { workspace = true }

# Optional: only compiled when the `live-tests` feature is enabled.
alloy = { version = "2", default-features = false, features = ["signers", "signer-local"], optional = true }

[features]
default = []
known-servers-file = []
# Opt-in: tests and examples that hit the real `timestamp.inblock.io`
# deployment. Requires network egress; pulls `alloy` for ephemeral EIP-191
# key generation. Off by default so CI stays offline.
live-tests = ["dep:alloy"]

[dev-dependencies]
tokio    = { workspace = true, features = ["full", "test-util", "macros"] }
wiremock = "0.6"
tempfile = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }
rand     = { workspace = true }
tracing-subscriber = { workspace = true }

[[example]]
name = "stress_1000"
path = "examples/stress_1000.rs"
required-features = ["live-tests"]
