[package]
name        = "aqua-timestamp-core"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
description = "Core types and primitives for the Aqua Aggregator (epoch, accumulator, witness minting)."

[dependencies]
aqua-rs-sdk = { workspace = true }
aqua-auth   = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }
hex        = { workspace = true }
sha3       = { workspace = true }
thiserror  = { workspace = true }
chrono     = { workspace = true }
tracing    = { workspace = true }
async-trait = { workspace = true }

fjall    = { workspace = true }
postcard = { workspace = true }
tokio    = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
